# qpdfImageEmbed

./: .gitignore  AGENTS.md  CMakeLists.txt  CTestCustom.cmake.in  README.md
.devcontainer/: Dockerfile
.github/workflows/: ci.yml  release.yml
src/: config.h.in  extraText.cpp  extraText.h  imageProvider.cpp  imageProvider.h  logger.cpp  logger.h  main.cpp  options.cpp  options.h  pdfProcessor.cpp  pdfProcessor.h  point.cpp  point.h  rect.cpp  rect.h
tests/: CMakeLists.txt  test_extraText.cpp  test_integration.cpp  test_options.cpp  test_point.cpp  test_rect.cpp
